FIX: Attribute remove and edit buttons should be visible.
Fixes reloaded #134 (Chrome and Safari)

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -168,13 +168,18 @@ h1 a, h1 a:hover {
   font-weight: bold;
 }
 
+.Attribute .buttons {
+  display: table-cell;
+  white-space: nowrap;
+}
+
 .DeleteButton, .EditButton {
   visibility: hidden;
 }
 
 .TopicPath:hover > .DeleteButton,
-.Attribute:hover > .DeleteButton,
-.Attribute:hover > .EditButton {
+.Attribute:hover > .buttons > .DeleteButton,
+.Attribute:hover > .buttons > .EditButton {
   visibility: visible;
 }
 
